# MobileGlues-plugin

./: .gitmodules  LICENSE
.github/workflows/: mg.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  mobileglues_info_getter.cpp  mobileglues_info_getter.h
app/src/main/cpp/MG/: extensions.h
app/src/main/java/com/fcl/plugin/mobileglues/: AppInfoDialogBuilder.kt  MGGLInfoDialogBuilder.kt  MainActivity.kt
app/src/main/java/com/fcl/plugin/mobileglues/settings/: MGConfig.kt
app/src/main/java/com/fcl/plugin/mobileglues/utils/: FileUtils.kt
app/src/main/res/layout/: dialog_app_info.xml  dialog_mg_gl_info.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh/: strings.xml
gradle/: libs.versions.toml
